# matchium

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
include/core/: constants.hpp  error.hpp  utils.hpp
include/http/: connection.hpp  parser.hpp  response.hpp  router.hpp
include/http/handlers/: snapshot_handler.hpp
include/net/: server_socket.hpp
scripts/: build.sh  run_client.sh  run_server.sh
src/client/: client.cpp  client.hpp  main.cpp
src/core/: constants.hpp  error.cpp  error.hpp  logger.cpp  logger.hpp  logger_macros.hpp  socket.cpp  socket.hpp  utils.cpp  utils.hpp
src/http/: connection.cpp  connection.hpp  parser.cpp  parser.hpp  request.hpp  router.cpp
src/net/: server_socket.cpp  server_socket.hpp  socket.cpp  socket.hpp
src/server/: main.cpp  server.cpp  server.hpp
